<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_marginLeft="0dp"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#68768e"
            android:layout_gravity="right"
            android:layout_marginLeft="0dp"
            android:paddingLeft="150dp">

            <TextView
                android:text="@string/score"
                android:layout_width="98dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:height="40dp"
                android:textSize="30dp"
                android:id="@+id/textView3"
                android:textStyle="bold"
                android:layout_gravity="right" />

            <TextView
                android:text="@string/scoreString"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:height="40dp"
                android:textSize="30dp"
                android:id="@+id/scoreView"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:id="@+id/mainLinearLayout">

            <TextView android:text="@string/firstNumber" android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:height="40dp"
                android:textSize="40dp"
                android:id="@+id/firstNumber"
                android:textStyle="bold"
                android:layout_gravity="center" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:text="@string/operator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="40dp"
                android:textSize="40dp"
                android:id="@+id/textView"
                android:layout_gravity="center_horizontal" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20px"
                android:layout_weight="0.09" />

            <TextView
                android:text="@string/secondNumber"
                android:layout_width="wrap_content"
                android:layout_height="49dp"
                android:height="40dp"
                android:textSize="40dp"
                android:id="@+id/secondNumber"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold" />

            <TextView
                android:text="@string/equals"
                android:layout_width="wrap_content"
                android:layout_height="29dp"
                android:height="40dp"
                android:textSize="40dp"
                android:id="@+id/textView2"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:layout_weight="0.03" />

        <EditText
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText"
            android:text="0"
            android:textSize="40dp"
            android:layout_gravity="center_horizontal" />


        <ViewSwitcher
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/my_switcher"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >



            <EditText
                android:id="@+id/clickable_edit_view"
                android:inputType="number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hello_world" >
            </EditText>

            <TextView
                android:id="@+id/clickable_text_view"
                android:clickable="true"
                android:text="@string/hello_world"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </ViewSwitcher>
    </LinearLayout>

</RelativeLayout>
